# evaluationagent

./: .env  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  COMPLETION_UPGRADE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  TASK2_COMPLETION_REPORT.md  TASK3_COMPLETION_REPORT.md  TASK_LOW_PRIORITY_ITEMS.md  TASK_RUNNABLE_DECISION.md  TASK_RUN_SEQUENTIAL_DECISION.md  debug_report_completeness.py  integrity_checker.py  langgraph.json  langgraphstudio_guildline.md  pyproject.toml  start-langgraph.ps1  temp_ci_data.json  test_completion.py  test_duplicate_logic.py  test_full_analysis.py  test_merge_fix.py  test_report_generation.py
.claude/: settings.local.json
.sisyphus/plans/: architecture-analysis-report.md  architecture-balanced-analysis.md  architecture-handover.md  architecture-rethink-report.md  function-status-report.md
src/evaluator/: __init__.py  __main__.py  cli.py  config.py  graph.py  main.py  state.py
src/evaluator/agents/: CICDAgent.md  CompareAgent.md  InputAgent.md  IntentParserAgent.md  LoaderAgent.md  ReporterAgent.md  ReviewerAgent.md  __init__.py  base_agent.py  cicd_agent.py  compare_agent.py  compare_dimensions.py  error_handler_agent.py  index.md  input_agent.py  intelligence_pipeline.py  intent_parser_agent.py  loader_agent.py  orchestrator_agent.py  recommendation_agent.py  reflection_agent.py  (+6 more)
src/open_source_evaluator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/storage/: __init__.py  manager.py  models.py
tests/: __init__.py  test_agents.py
tests/agents/: __init__.py
(+66 files in other folders)
