[project]
name = "open-source-evaluator"
version = "0.1.0"
description = "Multi-agent system for evaluating open source projects"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "gitpython>=3.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100
